--- a/gs.css
+++ b/gs.css
@@ -1,33 +1,38 @@
   .name {
     color: red;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font:12
+    font:18;
+   
+  }
+
+  .name:hover  { 
+     text-shadow: 1px 2px 2px black;
   }
 
   .speech {
     color: black;
     font-family: sans-serif;
-    font:14
+    font:14;
   }
 
   .song {
     color: black;
     font-family: 'Courier New';
-    font:16
+    font:16;
   }
 
   .directions {
     color: rgb(8, 8, 8);
     background-color: yellow;
     font-family: 'monospace';
-    font:18
+    font:18;
   }
 
   .directions:hover  {
     background-color: #1b2e41;
     font-family:  'monospace';
     color: whitesmoke;
-    font:18
+    font:18;
   }
 
   .ALEX{
@@ -47,6 +52,15 @@
  
 }
 
+.ALEXIS{
+  color: tan;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.SIR M{
+  color: orchid;
+  font-family: serif;
+}
 
 .ALL{
   color: skyblue;
